changing bio.html

--- a/bio.html
+++ b/bio.html
@@ -16,9 +16,9 @@
         <p>This is a placeholder for my introduction</p>
         <h2>Contact Info</h2>
             <ul>
-                <li><strong>Email:</strong> garg.shally05@gmail.com</li>
+                <li><strong>Email:</strong> <a href="mailto: garg.shally05@gmail.com">garg.shally05@gmail.com</li>
                 <li><strong>Github:</strong><a href="https://github.com/shallygarg">shallygarg</a> </li>
-                <li><strong>Portfolio:</strong> <a>coming soon</a></li>
+                <li><strong>Portfolio:</strong> <a href=#>coming soon</a>></li>
             </ul>
     </body>
 </html>
