updated image file

--- a/bio.html
+++ b/bio.html
@@ -12,7 +12,7 @@
         <h2>
             Shally Garg
         </h2>
-        <img src="C:\Users\shall\Desktop\code\second-day-stuff">
+        <img src="shally-image.jpg">
         <p>This is a placeholder for my introduction</p>
         <h2>Contact Info</h2>
             <ul>
